--- a/CooperationApp/Views/Main.storyboard
+++ b/CooperationApp/Views/Main.storyboard
@@ -86,7 +86,7 @@
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <inset key="titleEdgeInsets" minX="-31" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <inset key="imageEdgeInsets" minX="-119" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Apple로 계속하기" image="google.png">
+                                        <state key="normal" title="Apple로 계속하기" image="applelogo" catalog="system">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
@@ -317,30 +317,49 @@
                                     <action selector="addListButton:" destination="Kxy-rI-Dt4" eventType="touchUpInside" id="gRs-rv-LPx"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q3q-57-utG">
-                                <rect key="frame" x="20" y="104.66666666666667" width="37" height="24.000000000000014"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="데이터를 불러오는중...." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q3q-57-utG">
+                                <rect key="frame" x="20" y="104.66666666666667" width="388" height="24.000000000000014"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jq7-f6-o4M">
+                                <rect key="frame" x="20" y="104.66666666666667" width="311" height="34.000000000000014"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YjZ-7e-1h8">
+                                <rect key="frame" x="341" y="106.33333333333333" width="67" height="30.999999999999986"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="tabEditContentTitleButton:" destination="Kxy-rI-Dt4" eventType="touchUpInside" id="6MY-hf-dbu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="r4T-PV-xgh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="q3q-57-utG" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" constant="20" id="2ps-Vp-0sa"/>
+                            <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="YjZ-7e-1h8" secondAttribute="trailing" constant="20" id="A4q-x9-4U3"/>
+                            <constraint firstItem="Jq7-f6-o4M" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" constant="20" id="BIi-jI-pbc"/>
                             <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="Gbn-w3-LKI" secondAttribute="trailing" constant="10" id="DUP-Ym-kHL"/>
+                            <constraint firstItem="Jq7-f6-o4M" firstAttribute="top" secondItem="pfl-R7-I51" secondAttribute="bottom" constant="20" id="Dlg-Kc-QNI"/>
                             <constraint firstItem="aq2-E4-0er" firstAttribute="leading" secondItem="iir-tl-inD" secondAttribute="trailing" constant="-2.5" id="E1O-4S-wL4"/>
                             <constraint firstItem="q3q-57-utG" firstAttribute="top" secondItem="pfl-R7-I51" secondAttribute="bottom" constant="20" id="E6w-8v-Be3"/>
                             <constraint firstItem="pfl-R7-I51" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="10" id="Gk7-6z-9c7"/>
                             <constraint firstItem="Utg-mR-brP" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" id="Jd7-Vb-YU3"/>
                             <constraint firstItem="Gbn-w3-LKI" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="110" id="Pye-fz-Evb"/>
+                            <constraint firstItem="YjZ-7e-1h8" firstAttribute="leading" secondItem="Jq7-f6-o4M" secondAttribute="trailing" constant="10" id="VoO-23-reu"/>
                             <constraint firstItem="hvh-Mn-QeN" firstAttribute="leading" secondItem="aq2-E4-0er" secondAttribute="trailing" constant="-7.5" id="YTF-5g-oX4"/>
                             <constraint firstItem="hvh-Mn-QeN" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="10" id="Z6G-5n-AsZ"/>
                             <constraint firstItem="Gbn-w3-LKI" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" constant="10" id="bth-xU-raJ"/>
                             <constraint firstItem="aq2-E4-0er" firstAttribute="centerY" secondItem="hvh-Mn-QeN" secondAttribute="centerY" id="cPl-yo-gAA"/>
                             <constraint firstItem="pfl-R7-I51" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" constant="10" id="dQq-EN-arH"/>
                             <constraint firstItem="iir-tl-inD" firstAttribute="centerY" secondItem="aq2-E4-0er" secondAttribute="centerY" id="hyD-uQ-CPY"/>
+                            <constraint firstItem="YjZ-7e-1h8" firstAttribute="centerY" secondItem="Jq7-f6-o4M" secondAttribute="centerY" id="nuZ-tl-Hz4"/>
                             <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="hvh-Mn-QeN" secondAttribute="trailing" constant="10" id="pAc-Gg-UHH"/>
+                            <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="q3q-57-utG" secondAttribute="trailing" constant="20" id="pkB-zI-SEs"/>
                             <constraint firstItem="Utg-mR-brP" firstAttribute="bottom" secondItem="r4T-PV-xgh" secondAttribute="bottom" id="tTJ-A3-64E"/>
                             <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="Utg-mR-brP" secondAttribute="trailing" id="y8c-WE-KEv"/>
                             <constraint firstItem="Utg-mR-brP" firstAttribute="top" secondItem="Gbn-w3-LKI" secondAttribute="bottom" constant="10" id="yRR-HS-kKW"/>
@@ -350,7 +369,11 @@
                         <outlet property="addCardButton" destination="aq2-E4-0er" id="PMT-ea-8or"/>
                         <outlet property="addListButton" destination="hvh-Mn-QeN" id="ipw-nK-cyW"/>
                         <outlet property="contentTitleLabel" destination="q3q-57-utG" id="nb9-nu-voV"/>
+                        <outlet property="contentTitleTextField" destination="Jq7-f6-o4M" id="wEl-dG-sZw"/>
                         <outlet property="editButton" destination="iir-tl-inD" id="KlH-QM-AMs"/>
+                        <outlet property="editContentTitleButton" destination="YjZ-7e-1h8" id="D4h-gk-Emm"/>
+                        <outlet property="moveLeftButton" destination="zvZ-c3-DV6" id="sog-RP-46B"/>
+                        <outlet property="moveRightButton" destination="M6U-8V-9tY" id="h1B-f6-FDS"/>
                         <outlet property="tableView" destination="Gbn-w3-LKI" id="dlH-Ul-7Oy"/>
                     </connections>
                 </viewController>
@@ -384,40 +407,40 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mj6-MT-pph">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mj6-MT-pph">
                                 <rect key="frame" x="24" y="164.66666666666666" width="380" height="94.999999999999972"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="카드 색" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LcU-gQ-5an">
-                                        <rect key="frame" x="0.0" y="0.0" width="48.333333333333336" height="20.333333333333332"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="380" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="MMq-be-lWs">
-                                        <rect key="frame" x="0.0" y="38.333333333333343" width="345.33333333333331" height="56.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="38.333333333333343" width="380" height="56.666666666666657"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t1m-35-KNV">
-                                                <rect key="frame" x="0.0" y="0.0" width="66.666666666666671" height="56.666666666666664"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="73.666666666666671" height="56.666666666666664"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="blue_circle"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eh1-IM-Wqo">
-                                                <rect key="frame" x="69.666666666666657" y="0.0" width="66.666666666666657" height="56.666666666666664"/>
+                                                <rect key="frame" x="76.666666666666657" y="0.0" width="73.666666666666657" height="56.666666666666664"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="green_circle"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Hh-bt-he4">
-                                                <rect key="frame" x="139.33333333333334" y="0.0" width="66.666666666666657" height="56.666666666666664"/>
+                                                <rect key="frame" x="153.33333333333334" y="0.0" width="73.333333333333343" height="56.666666666666664"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="orange_circle"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XBW-f5-waz">
-                                                <rect key="frame" x="209" y="0.0" width="66.666666666666686" height="56.666666666666664"/>
+                                                <rect key="frame" x="229.66666666666666" y="0.0" width="73.666666666666657" height="56.666666666666664"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="purple_circle"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ylk-TG-Yrr">
-                                                <rect key="frame" x="278.66666666666669" y="0.0" width="66.666666666666686" height="56.666666666666664"/>
+                                                <rect key="frame" x="306.33333333333331" y="0.0" width="73.666666666666686" height="56.666666666666664"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="yellow_circle"/>
                                             </button>
@@ -763,11 +786,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="applelogo" catalog="system" width="103" height="128"/>
         <image name="arrowshape.turn.up.left.fill" catalog="system" width="128" height="106"/>
         <image name="arrowshape.turn.up.right.fill" catalog="system" width="128" height="106"/>
         <image name="blue_circle" width="42.666667938232422" height="42.666667938232422"/>
         <image name="chevron.backward" catalog="system" width="96" height="128"/>
-        <image name="google.png" width="18" height="18"/>
         <image name="green_circle" width="42.666667938232422" height="42.666667938232422"/>
         <image name="list.bullet.rectangle.portrait" catalog="system" width="115" height="128"/>
         <image name="logo" width="570" height="252"/>
